2005-08-29  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-op.c: Fix problems with crashing
    when signing. 
    * libseahorse/seahorse-key.c: 
    * libseahorse/seahorse-key.h: Add functions to get a short keyid.
    * INSTALL:
    * configure.in:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-signatures.c:
    * libseahorse/seahorse-signatures.glade:
    * pixmaps/Makefile.am:
    * plugns/gedit/seahorse-gedit.c:
    * src/main.c: Added proper support for signature notifications via 
    libnotify (bug# 314782)
    * libseahorse/seahorse-key-store.c: Show short key id in display
    * libseahorse/seahorse-default-key-control.c: Code cleanup
    * libseahorse/seahorse-op.c: Fix another crasher when signing.
    
2005-08-28  Adam Schreiber <sadam@clemson.edu>
    * libseahorse/seahorse-gpgmex-op.c:
    * libseahorse/seahorse-gpgmex-util.c:
    * libseahorse/seahorse-gpgmex.h:
    * libseahorse/seahorse-key-store.h:
    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-pgp-source.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade:
    * src/seahorse-xloadimage.c: Initial Photo ID Support
    (Bug #160413)

2005-08-26  Nate Nielsen <nielsen@memberwebs.com>

    * Merged changes from STABLE branch.

2005-08-24  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h:
    * plugins/gedit/seahorse-gedit.c: Move the so-so generic block 
    detection code into the various places that use it and specialize it. 
    * configure.in: Allow DBUS support to be disabled.
    * libseahorse/seahorse-context.c: Fix bug with not returning