@@ -1,3 +1,7 @@
+2005-08-31  Adam Schreiber <sadam@clemson.edu>
+    * libseahorse/seahorse-pgp-key-op.c: Fixed multiple photo id
+    appearance bug (Bug #314981)
+
 2005-08-29  Nate Nielsen <nielsen@memberwebs.com>
 
     * libseahorse/seahorse-op.c: Fix problems with crashing
